--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -21,7 +21,7 @@
 
     .header {
       height: 50px;
-      background-color: #4CAF50; /* Cor de fundo da seção superior */
+      background-color: rgb(0, 157, 255); /* Cor de fundo da seção superior */
       display: flex;
       align-items: center;
       justify-content: center;
@@ -35,7 +35,7 @@
     }
 
     .sidebar {
-      background-color: #f4f4f4; /* Cor de fundo das seções laterais */
+      background-color: rgb(0, 157, 255); /* Cor de fundo das seções laterais */
       padding: 10px;
     }
 
