--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -73,7 +73,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <h1>Seção Superior</h1>
+      <h1>WAR JS</h1>
     </div>
     <div class="content">
       <div class="sidebar">
