--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Centralizar SVG</title>
+  <title>WAR JS</title>
   <style>
     body, html {
       height: 100%;
