--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -109,13 +109,16 @@
     async function main() {
       const Fase = await Consultarfase(lobbyId);
 
+      ImprimirJogadores(lobbyId);
+
       if (Fase == 0) {
         CoresMain(lobbyId);
       } else if (Fase == 1) {
         console.log("Fase 1, ja iniciado");
       }
 
-      ImprimirJogadores(lobbyId);
+      atribuirObjetivos();
+
 
     }
 
