--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -78,6 +78,7 @@
     <div class="content">
       <div class="sidebar">
         <!-- Conteúdo da barra lateral esquerda -->
+        <p>Seu Objetivo :<span id="Objetivo"></span></p>
         <p>Barra Lateral Esquerda</p>
       </div>
       <div class="main">
