--- a/inicio.html
+++ b/inicio.html
@@ -44,6 +44,8 @@
       </div>
       <div class="mb-3" id="Perfil2" style="display: none;">
         <div id="usuarioLogado" class="mb-3" style="display: none;"></div>  
+        <script src="scripts.js"></script>
+
         <script>
 
         const UsLogado = localStorage.getItem('usuarioLogado')
@@ -63,5 +65,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="scripts.js"></script>
+    
   </body>
   </html>
