--- a/inicio.html
+++ b/inicio.html
@@ -48,6 +48,28 @@
 
         <script>
 
+        document.getElementById('entrarLobby').addEventListener('click', function() {
+          document.getElementById('entrarLobbyForm').style.display = 'block';
+          document.getElementById('criarLobbyForm').style.display = 'none';
+          document.getElementById('Perfil2').style.display = 'none';
+        });
+
+        document.addEventListener('DOMContentLoaded', function() {
+          verificarLogin();
+        });
+
+        document.getElementById('criarLobby').addEventListener('click', function() {
+          document.getElementById('criarLobbyForm').style.display = 'block';
+          document.getElementById('entrarLobbyForm').style.display = 'none';
+          document.getElementById('Perfil2').style.display = 'none';
+        });
+
+        document.getElementById('Perfil').addEventListener('click', function() {
+          document.getElementById('criarLobbyForm').style.display = 'none';
+          document.getElementById('entrarLobbyForm').style.display = 'none';
+          document.getElementById('Perfil2').style.display = 'block';
+        });
+
         const UsLogado = localStorage.getItem('usuarioLogado')
         getUsuarioLogado(UsLogado);
         
