--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -123,6 +123,7 @@
 
       const UsLogado = localStorage.getItem('usuarioLogado')
       getUsuarioLogado(UsLogado);
+      console.log (UsLogado);
 
     }
 
