--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -124,6 +124,7 @@
       const UsLogado = localStorage.getItem('usuarioLogado')
       getUsuarioLogado(UsLogado);
       verificarLogin();
+      ExibeObjetivo(lobbyId,UsLogado)
 
     }
 
