--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -125,7 +125,8 @@
       getUsuarioLogado(UsLogado);
       verificarLogin();
       ExibeObjetivo(lobbyId,UsLogado)
-
+      ObjetivoMain()
+      
     }
 
     const svgObject = document.getElementById('svgObject');
