--- a/inicio.html
+++ b/inicio.html
@@ -47,7 +47,7 @@
         <script src="scripts.js"></script>
 
         <script>
-
+async function main(){
         document.getElementById('entrarLobby').addEventListener('click', function() {
           document.getElementById('entrarLobbyForm').style.display = 'block';
           document.getElementById('criarLobbyForm').style.display = 'none';
@@ -94,7 +94,8 @@
             } else {
             console.log('Usuário não encontrado em nenhuma partida');
           }
-
+        }
+          main();
           </script>
       </div>
       
