--- a/inicio.html
+++ b/inicio.html
@@ -112,7 +112,7 @@
       console.log('Todas as partidas:', partidas);
 
       const partidaUsuario = encontrarPartidaUsuario(partidas, usuarioLogado);
-      consol.log(partidaUsuario);
+      console.log(partidaUsuario);
       if (partidaUsuario) {
         console.log(`Usuário está na partida com ID: ${partidaUsuario.id}`);
         // Faça algo com a partida encontrada, por exemplo:
