--- a/inicio.html
+++ b/inicio.html
@@ -106,7 +106,7 @@
     }
 
     async function main() {
-      const usuarioLogado = 'nomeDoUsuario'; // Substitua pelo nome real do usuário logado
+      const usuarioLogado = UsLogado; // Substitua pelo nome real do usuário logado
       const partidas = await dadospartidasemid();
 
       console.log('Todas as partidas:', partidas);
