--- a/inicio.html
+++ b/inicio.html
@@ -118,7 +118,7 @@
       if (partidaUsuario) {
         console.log(`Usuário está na partida com ID: ${partidaUsuario.id}`);
 
-        const partidasId = document.getElementById("PartidasID").textContent = partidaUsuario.id;
+        document.getElementById("PartidasID").textContent = partidaUsuario.id;
         
         // Faça algo com a partida encontrada, por exemplo:
         // mudarCorSpan(partidaUsuario);
