--- a/inicio.html
+++ b/inicio.html
@@ -44,8 +44,7 @@
       </div>
       <div class="mb-3" id="Perfil2" style="display: none;">
         <div id="usuarioLogado" class="mb-3" style="display: none;"></div>  
-        
-        <div id="PartidasID" class="mb-3" style="display: none;"></div>  
+        <div id="PartidasID" class="mb-3" style="display: block;"></div>  
         <script src="scripts.js"></script>
 
         <script>
