--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -115,18 +115,18 @@
 
       if (Fase == 0) {
         CoresMain(lobbyId);
+        atribuirObjetivos();
+        const UsLogado = localStorage.getItem('usuarioLogado')
+        getUsuarioLogado(UsLogado);
+        verificarLogin();
+        ExibeObjetivo(lobbyId,UsLogado);
+        ObjetivoMain();
+
       } else if (Fase == 1) {
         console.log("Fase 1, ja iniciado");
       }
 
-      atribuirObjetivos();
-
-      const UsLogado = localStorage.getItem('usuarioLogado')
-      getUsuarioLogado(UsLogado);
-      verificarLogin();
-      ExibeObjetivo(lobbyId,UsLogado)
-      ObjetivoMain()
-      
+  
     }
 
     const svgObject = document.getElementById('svgObject');
