--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -117,8 +117,8 @@
       if (Fase == 0) {
         CoresMain(lobbyId);
         atribuirObjetivos();
-        getUsuarioLogado(UsLogado);
-        ObjetivoMain(lobbyId);
+        //getUsuarioLogado(UsLogado);
+       // ObjetivoMain(lobbyId);
 
       } else if (Fase == 1) {
         console.log("Fase 1, ja iniciado");
