--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -124,8 +124,8 @@
         console.log("Fase 1, ja iniciado");
       }
       
-      verificarLogin();
-      ExibeObjetivo(lobbyId,UsLogado);
+   //   verificarLogin();
+     // ExibeObjetivo(lobbyId,UsLogado);
 
   
     }
