--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -117,15 +117,15 @@
       if (Fase == 0) {
         CoresMain(lobbyId);
         atribuirObjetivos();
-        //getUsuarioLogado(UsLogado);
+        getUsuarioLogado(UsLogado);
        // ObjetivoMain(lobbyId);
 
       } else if (Fase == 1) {
         console.log("Fase 1, ja iniciado");
       }
       
-   //   verificarLogin();
-     // ExibeObjetivo(lobbyId,UsLogado);
+      verificarLogin();
+      ExibeObjetivo(lobbyId,UsLogado);
 
   
     }
