--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -118,7 +118,7 @@
         CoresMain(lobbyId);
         atribuirObjetivos();
         getUsuarioLogado(UsLogado);
-       // ObjetivoMain(lobbyId);
+        ObjetivoMain(lobbyId);
 
       } else if (Fase == 1) {
         console.log("Fase 1, ja iniciado");
