--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -126,7 +126,7 @@
       
       verificarLogin();
       ExibeObjetivo(lobbyId,UsLogado);
-      ObjetivoMain(lobbyId)
+      ObjetivoMain(lobbyId);
   
     }
 
