--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -116,7 +116,7 @@
 
       if (Fase == 0) {
         CoresMain(lobbyId);
-        atribuirObjetivos();
+  //      atribuirObjetivos();
         getUsuarioLogado(UsLogado);
 
       } else if (Fase == 1) {
