--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -112,7 +112,7 @@
 
     async function main() {
       const Fase = await Consultarfase(lobbyId);
-
+      
       ImprimirJogadores(lobbyId);
         const UsLogado = localStorage.getItem('usuarioLogado')
 
@@ -121,7 +121,7 @@
   //      atribuirObjetivos();
         getUsuarioLogado(UsLogado);
         ExibeObjetivo(lobbyId,UsLogado);
-        ObjetivoMain(lobbyId);
+      //  ObjetivoMain(lobbyId);
 
       } else if (Fase == 1) {
         console.log("Fase 1, ja iniciado");
