--- a/inicio.html
+++ b/inicio.html
@@ -84,7 +84,7 @@
 
             async function dadospartidasemid() {
       try {
-        const response = await fetch('https://dbwar.onrender.com/partida');
+        const response = await fetch('https://45.140.193.150:8443/partida');
         if (!response.ok) {
           throw new Error(`Erro ao buscar partidas: ${response.statusText}`);
         }
