--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -142,10 +142,8 @@
       
       console.log("6");
 
-    }
 
-
-    console.log("7");
+      console.log("7");
 
     const svgObject = document.getElementById('svgObject');
 
@@ -162,6 +160,11 @@
     }); 
     console.log("9");
 
+    }
+
+    main();
+
+    
   </script>
 </body>
 </html>
