--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -120,6 +120,8 @@
     CoresMain(lobbyId);
     ObjetivoMain(lobbyId);
 
+    Atualizafase(lobbyId,1);
+
     const svgObject = document.getElementById('svgObject');
 
     svgObject.onload = svgLoaded;
