--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -100,37 +100,33 @@
     </div>
   </div>
 
-  <script src="/Partida/Partida.js"></script> <!-- Certifique-se de que o script Partida.js é carregado primeiro -->
-  <script src="/scripts.js"></script> <!-- Certifique-se de que o script Partida.js é carregado primeiro -->
+  <script src="/Partida/Partida.js"></script> <!-- Carregue primeiro -->
+  <script src="/scripts.js"></script>
 
   <script>
-    // Função para identificar e destacar territórios
-    const urlParams = new URLSearchParams(window.location.search);
-    const lobbyId = urlParams.get('id');
-    const UsLogado = localStorage.getItem('usuarioLogado')
-    verificarLogin();
+    async function init() {
+      const urlParams = new URLSearchParams(window.location.search);
+      const lobbyId = urlParams.get('id');
+      const UsLogado = localStorage.getItem('usuarioLogado');
 
-    ImprimirJogadores(lobbyId);
-    getUsuarioLogado(UsLogado);
-    ExibeObjetivo(lobbyId,UsLogado);
+      await verificarLogin();
+      await ImprimirJogadores(lobbyId);
+      await getUsuarioLogado(UsLogado);
+      await ExibeObjetivo(lobbyId, UsLogado);
+      await CoresMain(lobbyId);
+      await ObjetivoMain(lobbyId);
 
-    CoresMain(lobbyId);
-
-    ObjetivoMain(lobbyId);
-
-    const svgObject = document.getElementById('svgObject');
-
-    svgObject.onload = svgLoaded;
-
-    function svgLoaded() {
-      console.log("SVG carregado");
-      aplicarCores(lobbyId);
+      const svgObject = document.getElementById('svgObject');
+      svgObject.onload = svgLoaded;
+      
+      async function svgLoaded() {
+        console.log("SVG carregado");
+        await aplicarCores(lobbyId);
+        identificarTerritorios();
+      }
     }
 
-    document.addEventListener('DOMContentLoaded', function() {
-      identificarTerritorios();
-    });
-
+    document.addEventListener('DOMContentLoaded', init);
   </script>
 </body>
 </html>
