--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -122,6 +122,7 @@
       svgObject.onload = svgLoaded;
       
       async function svgLoaded() {
+        const lobbyId = urlParams.get('id');
         console.log("SVG carregado");
         await aplicarCores(lobbyId);
         identificarTerritorios();
