--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -127,9 +127,8 @@
 
         const lobbyId = urlParams.get('id');
         console.log("SVG carregado");
+      //  await aplicarCores(lobbyId);
         await identificarTerritorios();
-
-        await aplicarCores(lobbyId);
       }
     document.addEventListener('DOMContentLoaded', init);
   </script>
