Atualizar o Partida.html

--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -124,7 +124,7 @@
         const urlParams = new URLSearchParams(window.location.search);
 
 const svgObject = document.getElementById('svgObject');
-     \\ svgObject.onload = svgLoaded;
+     // svgObject.onload = svgLoaded;
       
 
         const lobbyId = urlParams.get('id');
