Atualizar o Partida.html

--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -129,7 +129,9 @@ const svgObject = document.getElementById('svgObject');
 
         const lobbyId = urlParams.get('id');
         console.log("SVG carregado");
-        await aplicarCores(lobbyId);
+try{
+        await aplicarCores(lobbyId);)catch{}
+}
         await identificarTerritorios();
       }
     document.addEventListener('DOMContentLoaded', init);
