--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WAR JS</title>
+  <title>WAR JSS</title>
   <style>
     body, html {
       height: 100%;
@@ -121,7 +121,7 @@ async function svgLoaded() {
   const urlParams = new URLSearchParams(window.location.search);
   const lobbyId = urlParams.get('id');
   console.log("SVG carregado");
-  
+
   await aplicarCores(lobbyId);
   await identificarTerritorios();
 }
