--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -119,7 +119,9 @@ async function init() {
   await ExibeObjetivo(lobbyId, UsLogado);
   
   await CoresMain(lobbyId);
-  
+
+  await Atualizafase(lobbyId,1);
+
   await ObjetivoMain(lobbyId);
   
 }
