--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -75,7 +75,10 @@
     <div class="header">
       <h1>WAR JS</h1>
     </div>
-    <div class="content">
+    <div class="preload">
+      <p class="preload-text">Carregando...</p>
+    </div>
+    <div class="content"  style="display: none";>
       <div class="sidebar">
         <!-- Conteúdo da barra lateral esquerda -->
         <p>Seu Objetivo :<span id="Objetivo"></span></p>
