--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -78,7 +78,7 @@
     <div class="preload">
       <p class="preload-text">Carregando...</p>
     </div>
-    <div class="content"  style="display: none";>
+    <div class="content"  style="display: none" id="Content";>
       <div class="sidebar">
         <!-- Conteúdo da barra lateral esquerda -->
         <p>Seu Objetivo :<span id="Objetivo"></span></p>
@@ -133,7 +133,7 @@ async function svgLoaded() {
   const urlParams = new URLSearchParams(window.location.search);
   const lobbyId = urlParams.get('id');  
   await aplicarCores(lobbyId);
-  document.getElementById('content').style.display = 'block';
+  document.getElementById('Content').style.display = 'block';
   
 }
 
