--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -78,7 +78,7 @@
     <div class="preload">
       <p class="preload-text">Carregando...</p>
     </div>
-    <div class="content"  style="display: none" id="Content";>
+    <div class="content"  style="display: none";>
       <div class="sidebar">
         <!-- Conteúdo da barra lateral esquerda -->
         <p>Seu Objetivo :<span id="Objetivo"></span></p>
