--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -133,8 +133,9 @@ async function svgLoaded() {
   const urlParams = new URLSearchParams(window.location.search);
   const lobbyId = urlParams.get('id');  
   await aplicarCores(lobbyId);
-  document.getElementsByClassName('content').style.display = 'block';
-  
+  document.getElementsByClassName('content')[0].style.display = 'block';
+  document.getElementsByClassName('preload')[0].style.display = 'none'; // Esconde o preload
+
 }
 
 document.addEventListener('DOMContentLoaded', () => {
