--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -143,7 +143,7 @@ document.addEventListener('DOMContentLoaded', () => {
   const svgObject = document.getElementById('svgObject');
   if (svgObject) {
     svgObject.onload = svgLoaded;
-    document.getElementsByClassName('content')[0].style.display = 'block';
+    document.getElementsByClassName('content')[0].style.display = 'none';
     document.getElementsByClassName('preload')[0].style.display = 'none'; // Esconde o preload
   }
 });
