--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -75,7 +75,7 @@
     <div class="header">
       <h1>WAR JS</h1>
     </div>
-    <div class="preload">
+    <div class="preload" style="display: block">
       <p class="preload-text">Carregando...</p>
     </div>
     <div class="content"  style="display: none";>
