--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -143,10 +143,13 @@ document.addEventListener('DOMContentLoaded', () => {
   const svgObject = document.getElementById('svgObject');
   if (svgObject) {
     svgObject.onload = svgLoaded;
-    document.getElementsByClassName('content')[0].style.display = 'none';
-    document.getElementsByClassName('preload')[0].style.display = 'none'; // Esconde o preload
   }
 });
+
+window.onload = function() {
+  document.getElementsByClassName('content')[0].style.display = 'none';
+  document.getElementsByClassName('preload')[0].style.display = 'none'; // Esconde o preload
+}
   </script>
 </body>
 </html>
