--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -147,7 +147,7 @@ document.addEventListener('DOMContentLoaded', () => {
 });
 
 window.onload = function() {
-  document.getElementsByClassName('content')[0].style.display = 'none';
+  document.getElementsByClassName('content')[0].style.display = 'block';
   document.getElementsByClassName('preload')[0].style.display = 'none'; // Esconde o preload
 }
   </script>
