--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -133,7 +133,9 @@ async function svgLoaded() {
   const urlParams = new URLSearchParams(window.location.search);
   const lobbyId = urlParams.get('id');  
   await aplicarCores(lobbyId);
-  
+  await document.getElementsByClassName('content')[0].style.display = 'block';
+  await document.getElementsByClassName('preload')[0].style.display = 'none'; // Esconde o preload
+
 }
 
 document.addEventListener('DOMContentLoaded', () => {
@@ -142,9 +144,7 @@ document.addEventListener('DOMContentLoaded', () => {
   const svgObject = document.getElementById('svgObject');
   if (svgObject) {
     svgObject.onload = svgLoaded;
-    //document.getElementsByClassName('content')[0].style.display = 'block';
-    document.getElementsByClassName('preload')[0].style.display = 'none'; // Esconde o preload
-
+    
   }
 });
 
