--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -12,6 +12,26 @@
       flex-direction: column;
     }
 
+    /* Preloader CSS */
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.9); /* Fundo branco semitransparente */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999; /* Alta prioridade para ficar acima de todos os outros elementos */
+  font-size: 24px; /* Tamanho da fonte para a mensagem */
+  color: #000; /* Cor da mensagem */
+}
+
+.hidden {
+  display: none;
+}
+
     .container { 
       display: flex;
       flex: 1;
@@ -75,6 +95,9 @@
     <div class="header">
       <h1>WAR JS</h1>
     </div>
+    <div class="preloader" id="preloader">
+      <p>Carregando...</p>
+    </div>
     <div class="content";>
       <div class="sidebar">
         <!-- Conteúdo da barra lateral esquerda -->
@@ -119,9 +142,8 @@ async function init() {
   
   await CoresMain(lobbyId); // Muda para fase 1
 
-  await ObjetivoMain(lobbyId); // Muda para fase 2  
+  await ObjetivoMain(lobbyId); // Muda para fase 1  
 
-  
 
 }
 
