--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -144,7 +144,7 @@ async function init() {
 
   await ObjetivoMain(lobbyId); // Muda para fase 1  
 
-  hideElement('preloader');
+  await hideElement('preloader');
 
 }
 
