--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -118,7 +118,8 @@
         <p>Nome do Jogador: <span id="nomeJogador6"></span></p>
         <p>Nome do Jogador: <span id="nomeJogador7"></span></p>
 
-        <p>Barra Lateral Direita</p>
+        <p>Turno atual: <span id="nomeJogador7"></span></p>
+
       </div>
     </div>
   </div>
@@ -152,7 +153,7 @@ async function svgLoaded() {
   await ObjetivoMain(lobbyId); // Muda para fase 1  
 
 
-  
+
   await ImprimirJogadores(lobbyId);
 
   await aplicarCores(lobbyId); //aplicação visual
