--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -118,7 +118,7 @@
         <p>Nome do Jogador: <span id="nomeJogador6"></span></p>
         <p>Nome do Jogador: <span id="nomeJogador7"></span></p>
 
-        <p>Turno atual: <span id="nomeJogador7"></span></p>
+        <p>Turno atual: <span id="TurnoAtual"></span></p>
 
       </div>
     </div>
