--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -13,24 +13,42 @@
     }
 
         /* Preloader CSS */
-    .preloader {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(255, 255, 255, 1); /* Fundo branco semitransparente */
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999; /* Alta prioridade para ficar acima de todos os outros elementos */
-      font-size: 24px; /* Tamanho da fonte para a mensagem */
-      color: #000; /* Cor da mensagem */
-    }
+    /* Preloader CSS */
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  font-size: 24px;
+  color: #000;
+}
 
-    .hidden {
-      display: none;
-    }
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  margin-bottom: 20px; /* Spacing between spinner and text */
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.hidden {
+  display: none;
+}
+
 
     .container { 
       display: flex;
