--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -114,6 +114,7 @@
       <h1>WAR JS</h1>
     </div>
     <div class="preloader" id="preloader">
+      <div class="loader"></div>
       <p>Carregando...</p>
     </div>
     <div class="content";>
