--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -179,6 +179,8 @@ async function svgLoaded() {
 
   await ExibeObjetivo(lobbyId, UsLogado); // 
 
+  await ExibeTurno(lobbyId);
+
   await MostrarHTML(preloader);
 
 }
