--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -171,7 +171,6 @@ async function svgLoaded() {
 
   await ObjetivoMain(lobbyId); // Muda para fase 1  
 
-  
 
   await ImprimirJogadores(lobbyId);
 
@@ -182,6 +181,8 @@ async function svgLoaded() {
   await ExibeTurno(lobbyId);
 
   await MostrarHTML(preloader);
+
+  AtualizaTurno(lobbyId,1);
 
 }
 
