--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -184,7 +184,7 @@ async function svgLoaded() {
 
 
   await AtualizaTurno(lobbyId,1);
-  await  VerificaTurno();
+  await  VerificaTurno(lobbyId);
 }
 
 document.addEventListener('DOMContentLoaded', () => {
