--- a/inicio.html
+++ b/inicio.html
@@ -13,7 +13,7 @@
   justify-content: center;
   align-items: center;
   /* background-color: #ffffff; */
-  background: url('file:///C:/Users/repbcc/Downloads/grunge-texture-background/10690.jpg') center/cover no-repeat; /* Caminho completo da imagem local */
+  background: url('') center/cover no-repeat; /* Caminho completo da imagem local */
   font-family: 'Arial', sans-serif;
 	}
 
