--- a/inicio.html
+++ b/inicio.html
@@ -12,7 +12,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background: url('//IMAGE/') center/cover no-repeat fixed; /* Caminho completo da imagem local */
+        background: url('//IMAGE/MarWorld.jpg') center/cover no-repeat fixed; /* Caminho completo da imagem local */
 
       }
     </style>
