--- a/inicio.html
+++ b/inicio.html
@@ -12,7 +12,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background: url('https://github.com/LKNunes/WarFast/blob/main/IMAGE/MarWorld.jpg') center/cover no-repeat fixed; /* Caminho completo da imagem local */
+        background: url('/IMAGE/MarWorld.jpg') center/cover no-repeat fixed;
 
       }
     </style>
