--- a/inicio.html
+++ b/inicio.html
@@ -12,6 +12,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        background-color: rgb(0, 157, 255);
 
       }
     </style>
