--- a/cadastrarUsuario.html
+++ b/cadastrarUsuario.html
@@ -3,39 +3,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
-<body style="background-color: #48067f; color: white; font-family: Arial, sans-serif;">
-    <div id="loginModal" class="modal fade" tabindex="-1" style="display: flex; justify-content: center; align-items: center; height: 100vh;">
-        <div class="modal-dialog" style="max-width: 400px; width: 100%; border: none; border-radius: 10px; overflow: hidden;">
-          <div class="modal-content" style="border: none;">
-            <div class="modal-header" style="background-color: rgb(214, 102, 10); color: white; display: flex; justify-content: space-between; align-items: center;">
-              <h5 class="modal-title">Faça login</h5>
-			  
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="background: none; border: none; color: white; font-size: 20px;">&times;</button>
-            </div>
-            <div class="modal-body" style="background-color: white; color: #48067f; padding: 20px;">
-              <form id="formLogin">
-                <div class="mb-3">
-                  <label for="usuarioLogin" class="form-label">Usuário</label>
-                  <input type="text" class="form-control" id="usuarioLogin" required style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
-                </div>
-                <div class="mb-3">
-                  <label for="senhaLogin" class="form-label">Senha</label>
-                  <input type="password" class="form-control" id="senhaLogin" required style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
-                  <label for="senhaLogin" class="form-label">Confirmar Senha</label>
-                  <input type="password" class="form-control" id="senhaLogin2" required style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
-                </div>
-              </form>
-            </div>
-            <div class="modal-footer" style="background-color: white; padding: 10px; display: flex; justify-content: flex-end;">
-            <button type="button" class="btn btn-primary" onclick="signup()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Criar Conta</button>
-	    <button type="button" class="btn btn-primary" onclick="redirect('index.html')" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 20px; border-radius: 5px; color: white;">Entrar</button>
+    <title>Criar Conta</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #48067f; /* Fundo roxo */
+            color: white;
+            font-family: Arial, sans-serif;
+        }
 
-            </div>
-          </div>
+        .login-container {
+            max-width: 400px;
+            width: 100%;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+        }
+
+        .login-header {
+            background-color: rgb(214, 102, 10);
+            color: white;
+            padding: 15px;
+            text-align: center;
+            position: relative;
+        }
+
+        .login-body {
+            padding: 20px;
+        }
+
+        .form-control {
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            padding: 10px;
+        }
+
+        .btn-primary {
+            background-color: rgb(214, 102, 10);
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            color: white;
+            margin-top: 10px;
+        }
+
+        .btn-primary:hover {
+            background-color: #c2550e;
+        }
+
+        .btn-close-custom {
+            background: none;
+            border: none;
+            color: white;
+            font-size: 20px;
+            position: absolute;
+            top: 10px;
+            right: 15px;
+        }
+    </style>
+</head>
+<body>
+    <div class="login-container">
+        <div class="login-header">
+            <h5 class="modal-title">Criar Conta</h5>
+            <button type="button" class="btn-close-custom" aria-label="Close">&times;</button>
         </div>
-      </div>
-      <script src="./auth.js"></script>
+        <div class="login-body">
+            <form id="formSignup" onsubmit="event.preventDefault(); signup();">
+                <div class="mb-3">
+                    <label for="usuarioLogin" class="form-label" style="color: #48067f;">Usuário</label>
+                    <input type="text" class="form-control" id="usuarioLogin" required>
+                </div>
+                <div class="mb-3">
+                    <label for="senhaLogin" class="form-label" style="color: #48067f;">Senha</label>
+                    <input type="password" class="form-control" id="senhaLogin" required>
+                </div>
+                <div class="mb-3">
+                    <label for="senhaLogin2" class="form-label" style="color: #48067f;">Confirmar Senha</label>
+                    <input type="password" class="form-control" id="senhaLogin2" required>
+                </div>
+                <button type="submit" class="btn btn-primary w-100">Criar Conta</button>
+                <button type="button" class="btn btn-primary w-100" onclick="redirect('index.html')">Entrar</button>
+            </form>
+        </div>
+    </div>
+
+    <script src="./auth.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
