--- a/cadastrarUsuario.html
+++ b/cadastrarUsuario.html
@@ -12,7 +12,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #48067f; /* Fundo roxo */
+            background-color: #0376ac; /* Fundo roxo */
             color: white;
             font-family: Arial, sans-serif;
         }
