--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -183,7 +183,7 @@ async function svgLoaded() {
   
   await MostrarHTML(preloader);
   
-  await ExibirTropas();
+  await ExibirTropas(lobbyId);
 
   //await AtualizaTurno(lobbyId,1);
   //await VerificaTurno(lobbyId);
