--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -183,7 +183,7 @@ async function svgLoaded() {
   
   await MostrarHTML(preloader);
   
-  //await ExibirTropas(lobbyId);
+  await ExibirTropas(lobbyId);
 
   //await AtualizaTurno(lobbyId,1);
   //await VerificaTurno(lobbyId);
