--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -139,6 +139,9 @@
 
         <p>Turno atual: <span id="TurnoAtual"></span></p>
 
+        <div id="coordinates">Mouse Coordinates: x: 0, y: 0</div>
+
+
       </div>
     </div>
   </div>
