--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -192,7 +192,7 @@ async function svgLoaded() {
   await ExibirTropas(lobbyId);
 
   svgObject.addEventListener("DOMContentLoaded", function() {
-            const svg = document.getElementById('mySVG');
+            const svg = document.getElementById('svgObject');
             const coordinatesDisplay = document.getElementById('coordinates');
 
             svg.addEventListener('mousemove', function(event) {
