--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -171,7 +171,7 @@ function atualizarCoordenadas(event) {
 }
 
 // Adiciona o listener para monitorar as coordenadas do mouse
-svgObject.addEventListener('mousemove', atualizarCoordenadas);
+svgObject.addEventListener('mouseclick', atualizarCoordenadas);
   
 }
 
