--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -163,6 +163,26 @@ async function init() {
  
   await getUsuarioLogado(UsLogado);
 
+  function getMousePosition(svgElement, event) {
+  var rect = svgElement.getBoundingClientRect();
+  return {
+      x: event.clientX - rect.left,
+      y: event.clientY - rect.top
+  };
+}
+
+// Exemplo de uso:
+var svgObject = document.getElementById('svgObject');
+
+svgObject.addEventListener('mousemove', function(event) {
+  var coords = getMousePosition(svgObject, event);
+  console.log('Coordenadas do mouse dentro do SVG:', coords.x, coords.y);
+});
+
+svgObject.addEventListener('click', function(event) {
+  console.log('Clique dentro do SVG:', event.clientX, event.clientY);
+});
+
 }
 
 async function svgLoaded() {
