--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -214,17 +214,18 @@ function getMousePosition(svgElement, event) {
   };
 }
 
-// Exemplo de uso:
-var svgObject = document.getElementById('svgObject');
+document.addEventListener("DOMContentLoaded", function() {
+  var svgObject = document.getElementById('svgObject');
 
-svgObject.addEventListener('mousemove', function(event) {
-  var coords = getMousePosition(svgObject, event);
-  console.log('Coordenadas do mouse dentro do SVG:', coords.x, coords.y);
-});
+  svgObject.addEventListener('mousemove', function(event) {
+    var coords = getMousePosition(svgObject, event);
+    console.log('Coordenadas do mouse dentro do SVG:', coords.x, coords.y);
+  });
 
-svgObject.addEventListener('click', function(event) {
-  var coords = getMousePosition(svgObject, event);
-  console.log('Clique dentro do SVG:', coords.x, coords.y);
+  svgObject.addEventListener('click', function(event) {
+    var coords = getMousePosition(svgObject, event);
+    console.log('Clique dentro do SVG:', coords.x, coords.y);
+  });
 });
   </script>
 </body>
