--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -194,6 +194,7 @@ async function svgLoaded() {
   
   await ExibirTropas(lobbyId);
 
+  await turnofase1(lobbyId);
 
   //await AtualizaTurno(lobbyId,1);
   //await VerificaTurno(lobbyId);
