--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -123,7 +123,10 @@ text {
       <div class="sidebar">
         <!-- Conteúdo da barra lateral esquerda -->
         <p>Seu Objetivo :<span id="Objetivo"></span></p>
-        <p>Barra Lateral Esquerda</p>
+        <div class="input-container hidden" id="inputContainer">
+          <input type="number" id="numeroInput" placeholder="Digite um número">
+          <button id="submitBtn">OK</button>
+        </div>
       </div>
       <div class="main">
         <object id="svgObject" type="image/svg+xml" data="/IMAGE/Mundi.svg"></object>
