--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -127,6 +127,8 @@ text {
           <input type="number" id="numeroInput" placeholder="Digite um número">
           <button id="submitBtn">OK</button>
         </div>
+        <p id="resultado"></p>
+
       </div>
       <div class="main">
         <object id="svgObject" type="image/svg+xml" data="/IMAGE/Mundi.svg"></object>
