--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -148,6 +148,16 @@ text {
 
         <div id="coordinates">Mouse Coordinates: x: 0, y: 0</div>
 
+        <div id="dice-container">
+          <div id="dice">
+              <div class="face front">1</div>
+              <div class="face back">2</div>
+              <div class="face right">3</div>
+              <div class="face left">4</div>
+              <div class="face top">5</div>
+              <div class="face bottom">6</div>
+          </div>
+      </div>
 
       </div>
     </div>
