--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -158,6 +158,7 @@ text {
               <div class="face bottom">6</div>
           </div>
       </div>
+      <button id="rollBtn">Roll Dice</button>
 
       </div>
     </div>
