--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -189,7 +189,7 @@ text {
               <div class="face bottom">6</div>
           </div>
       </div>
-      <button id="rollBtn">Roll Dice</button>
+      <button id="rollBtn">Rolar Dado</button>
 
       </div>
     </div>
