--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -35,6 +35,8 @@
     align-items: center;
     justify-content: center;
     font-size: 2em;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
+
 }
 
 .front { transform: rotateY(0deg) translateZ(50px); }
