--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -23,6 +23,8 @@
     transform-style: preserve-3d;
     transform: rotateX(0deg) rotateY(0deg);
     transition: transform 2s;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+
 }
 
 .face {
