--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -12,8 +12,11 @@
       flex-direction: column;
     }
 
-#dice-container {
+    #dice-container {
     perspective: 1000px;
+    position: relative;
+    width: 100px;
+    height: 100px;
 }
 
 #dice {
